<resources>
    <string name="app_name">ShortSounds</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_rename">Rename</string>
    <string name="action_new">New</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="rename_input">New Title</string>
    <string name="rename_box_title">Rename ShortSound</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="shortsounds_array">
        <item>Rock</item>
        <item>Your</item>
        <item>Socks</item>
        <item>Off</item>
        <item>Dude</item>
        <item>Lame_S0ng</item>
        <item>For Fred</item>
    </string-array>
    <string-array name="track_array">
        <item>track 1</item>
        <item>track 2</item>
        <item>track 3</item>
        <item>track 4</item>
        <item>track 5</item>
        <item>track 6</item>
    </string-array>
    <string-array name="effects_array">
        <item>effect 1</item>
        <item>effect 2</item>
    </string-array>
    <string name="fake_track">editing stuff</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="EQ">EQ</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="recordASound">Record a Sound!</string>
    <string name="Reverb">Reverb</string>
    <string name="solo">SOLO</string>
    <string name="delete">DELETE</string>
</resources>
