<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="2" android:showAsAction="ifRoom"
        android:icon="@drawable/action_save"/>
    <item android:id="@+id/action_new" android:title="@string/action_new"
        android:orderInCategory="4" android:showAsAction="ifRoom"
        android:icon="@drawable/action_new"/>
    <item android:id="@+id/action_share" android:title="@string/action_share"
         android:actionProviderClass="android.widget.ShareActionProvider"
         android:orderInCategory="1" android:showAsAction="always"/>
    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:orderInCategory="3" android:showAsAction="ifRoom"
        android:icon="@drawable/action_delete"/>

</menu>
