<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/newTitle"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/rename_input" />
    <LinearLayout android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
    <Button
    android:id="@+id/cancel"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    android:layout_margin="10dp"
    android:textColor="#fff"
    android:textStyle="bold" />
    <Button
        android:id="@+id/okay"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>