<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/eqCanvasParent"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<LinearLayout android:id="@+id/topPanel"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".1"
    android:orientation="vertical"
    android:minHeight="30dp">
    <TextView android:id="@+id/effectNameTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/EQ"
        android:textSize="20sp"
        android:minHeight="30dp">
    </TextView>
    <!-- If the client uses a customTitle, it will be added here. -->
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/effect_content"
    android:layout_weight=".8"
    android:orientation="vertical"
    android:gravity="center">

    <com.sloths.speedy.shortsounds.view.EQCanvas2
        android:id="@+id/effect_canvas"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="bottom"
    android:layout_weight=".1"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/cancelEffectButton"
        android:layout_gravity="center_vertical"
        android:layout_toLeftOf="@+id/effectSpace"
        android:layout_toStartOf="@+id/effectSpace"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/saveEffectButton"
        android:layout_gravity="center_vertical"
        android:layout_alignBottom="@+id/cancelEffectButton"
        android:layout_toRightOf="@+id/effectSpace"
        android:layout_toEndOf="@+id/effectSpace"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/effectSpace" />

</RelativeLayout>

</LinearLayout>